--- a/learn_layout/style.css
+++ b/learn_layout/style.css
@@ -33,3 +33,47 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
+.static{
+  position: static;
+  border: 2px solid blue;
+}
+
+
+.relative1{
+  border: 2px solid purple;
+}
+
+.relative2{
+  border: 2px solid pink;
+  position: relative;
+  top: -7px;
+  left: 20px;
+  background-color: white;
+  width: 500px;
+}
+
+.fixed{
+  position: fixed;
+  border: 7px dotted yellow;
+  background-color: white;
+  top: 0;
+  right: 0;
+  width: 200px;
+}
+
+.relative{
+  position: relative;
+  border: 3px solid hotpink;
+  width: 600px;
+  height: 400px;
+}
+
+.absolute{
+  position: absolute;
+  border: 3px solid indigo;
+  top: 120px;
+  right: 0px;
+  width: 300px;
+  height: 200px;
+}
