--- a/learn_layout/css/style.css
+++ b/learn_layout/css/style.css
@@ -117,6 +117,8 @@ p{
   float: right;
   height: 200px;
 }
+
+/*Clearfix*/
 .section-clearfix{
   font-size: 18px;
   border: 2px solid red;
@@ -129,6 +131,7 @@ p{
   overflow: auto;
 }
 
+/*Inline-Block*/
 .label{
   top: 0;
   left: 0;
@@ -151,6 +154,18 @@ p{
 
 .after-box2{
   border: 2px solid orange;
+}
+
+/*Columns*/
+.three-column{
+  padding: 1em;
+  column-count: 3;
+  column-gap: 3em;
+  -moz-column-count: 3;
+  -moz-column-gap: 1em;
+  -webkit-column-count: 3;
+  -webkit-column-gap: 1em;
+  border: 2px solid green;
 }
 
 
