added fullscreen feature

--- a/javascript30/11 - Custom Video Player/style.css
+++ b/javascript30/11 - Custom Video Player/style.css
@@ -27,15 +27,17 @@ body {
   overflow: hidden;
 }
 
-/*This css is only applied when fullscreen is active*/
-.player:fullscreen {
-  max-width: none;
-  width: 100%;
-}
-
-.player:-webkit-full-screen {
-  max-width: none;
-  width: 100%;
+.player.fullscreen {
+  border: none;
+  box-shadow: none;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: 0;
 }
 
 .player__video {
@@ -154,74 +156,3 @@ input[type=range]::-moz-range-thumb {
   background: #ffc600;
   cursor: pointer;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
